; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_file.c_grub_file_get_device_name.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_file.c_grub_file_get_device_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GRUB_ERR_BAD_FILENAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"missing `)'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @grub_file_get_device_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 40
  br i1 %10, label %11, label %52

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @grub_strchr(i8* %12, i8 signext 41)
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i32, i32* @GRUB_ERR_BAD_FILENAME, align 4
  %18 = call i32 @grub_error(i32 %17, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %2, align 8
  br label %53

19:                                               ; preds = %11
  %20 = load i8*, i8** %4, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = ptrtoint i8* %20 to i64
  %23 = ptrtoint i8* %21 to i64
  %24 = sub i64 %22, %23
  %25 = trunc i64 %24 to i32
  %26 = call i64 @grub_malloc(i32 %25)
  %27 = inttoptr i64 %26 to i8*
  store i8* %27, i8** %5, align 8
  %28 = load i8*, i8** %5, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %31, label %30

30:                                               ; preds = %19
  store i8* null, i8** %2, align 8
  br label %53

31:                                               ; preds = %19
  %32 = load i8*, i8** %5, align 8
  %33 = load i8*, i8** %3, align 8
  %34 = getelementptr inbounds i8, i8* %33, i64 1
  %35 = load i8*, i8** %4, align 8
  %36 = load i8*, i8** %3, align 8
  %37 = ptrtoint i8* %35 to i64
  %38 = ptrtoint i8* %36 to i64
  %39 = sub i64 %37, %38
  %40 = sub nsw i64 %39, 1
  %41 = trunc i64 %40 to i32
  %42 = call i32 @grub_memcpy(i8* %32, i8* %34, i32 %41)
  %43 = load i8*, i8** %5, align 8
  %44 = load i8*, i8** %4, align 8
  %45 = load i8*, i8** %3, align 8
  %46 = ptrtoint i8* %44 to i64
  %47 = ptrtoint i8* %45 to i64
  %48 = sub i64 %46, %47
  %49 = sub nsw i64 %48, 1
  %50 = getelementptr inbounds i8, i8* %43, i64 %49
  store i8 0, i8* %50, align 1
  %51 = load i8*, i8** %5, align 8
  store i8* %51, i8** %2, align 8
  br label %53

52:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %53

53:                                               ; preds = %52, %31, %30, %16
  %54 = load i8*, i8** %2, align 8
  ret i8* %54
}

declare dso_local i8* @grub_strchr(i8*, i8 signext) #1

declare dso_local i32 @grub_error(i32, i8*) #1

declare dso_local i64 @grub_malloc(i32) #1

declare dso_local i32 @grub_memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
